create, list, read and edit events; enforce opening time
